--- a/artificia.html
+++ b/artificia.html
@@ -92,9 +92,7 @@
 
     <div class="background-gradient">
       <section class="section-suitors">
-        <h2 class="section-title">
-          Meet &nbsp;&nbsp;&nbsp;the &nbsp;&nbsp;&nbsp;Suitors
-        </h2>
+        <h2 class="section-title">Meet the Suitors</h2>
         <h3 class="section-subtitle">
           Each with unique stories and personalities.<br />Learn who they are,
           influence their choices, and maybe they'll start to feel something
@@ -132,9 +130,7 @@
       </section>
 
       <section class="section-luna">
-        <h2 class="section-title">
-          Meet &nbsp;&nbsp;&nbsp;Luna &nbsp;&nbsp;&nbsp;Ashfall
-        </h2>
+        <h2 class="section-title">Meet Luna Ashfall</h2>
         <h3 class="section-subtitle">
           The main character behind your story.<br />The average art student
           turned potential felon's accomplice.
@@ -173,9 +169,7 @@
       </section>
 
       <section class="section-technical">
-        <h2 class="section-title">
-          Unique&nbsp;&nbsp;&nbsp;Game&nbsp;&nbsp;&nbsp; Mechanics
-        </h2>
+        <h2 class="section-title">Unique Game Mechanics</h2>
         <h3 class="section-subtitle">
           Over 40 endings. 5 main chapters. Side Stories to learn more about
           each suitor.
@@ -214,10 +208,7 @@
       </section>
 
       <section class="section-landing">
-        <h2 class="section-title">
-          Explore&nbsp;&nbsp;&nbsp; a&nbsp;&nbsp;&nbsp; new&nbsp;&nbsp;&nbsp;
-          world
-        </h2>
+        <h2 class="section-title">Explore a new world</h2>
 
         <div class="meow">
           <div class="imagebase"><img src="img/heischoice.gif" /></div>
@@ -274,10 +265,7 @@
       </section>
 
       <section class="section-brooch">
-        <h2 class="section-title">
-          Unlock&nbsp;&nbsp;&nbsp; Myvia's&nbsp;&nbsp;&nbsp;
-          secrets&nbsp;&nbsp;&nbsp;
-        </h2>
+        <h2 class="section-title">Unlock Myvia's secrets</h2>
         <h3 class="section-subtitle">
           What did your father really want?<br />Are bots meant to be our
           equals?
