--- a/artificia.html
+++ b/artificia.html
@@ -92,13 +92,14 @@
 
     <div class="background-gradient">
       <section class="section-suitors">
+        <div id="section-suitors-tag"></div>
         <h2 class="section-title">Meet the Suitors</h2>
         <h3 class="section-subtitle">
           Each with unique stories and personalities.<br />Learn who they are,
           influence their choices, and maybe they'll start to feel something
           special towards you, too.
         </h3>
-        <div id="section-suitors-tag"></div>
+
         <div class="suitors-row-back">
           <div class="suitorimage zane" id="zane">
             <img src="img/zane.png" />
@@ -316,6 +317,6 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="js/three.js"></script>
 
-    <script type="text/javascript" src="js/test.js"></script>
+    <script type="text/javascript" src="js/artificia.js"></script>
   </body>
 </html>
