Small bug fixes 4/28

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
         <ul class="nav__items">
           <li class="nav__t">
-            <a href="index.html" class="nav__item">Home</a>
+            <a href="index.html" class="nav__item">Test</a>
           </li>
           <li class="nav__t">
             <a href="artificia.html" class="nav__item">Artificia</a>
@@ -186,7 +186,7 @@
             <div class="section-us__profiles-image">
               <img
                 class="section-us__profiles--img"
-                src="img/katiegiugno.png"
+                src="img/katiegiugno.jpg"
                 alt="Katie Giugno"
               />
             </div>
