Additional bug fixes 4/28

--- a/artificia.html
+++ b/artificia.html
@@ -298,10 +298,7 @@
     </div>
 
     <footer class="footer">
-      <div class="footer__copyright">
-        ©KoiDev Games 2021
-        <div class="footer__email">koidev@gmail.com</div>
-      </div>
+      <div class="footer__copyright">©KoiDev Games 2021</div>
       <div class="footer__logo">
         <img src="img/koidevbig.png" alt="KoiDev Logo" class="nav__logo" />
       </div>
