--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         
         <ul class="nav__items">
           <li class="nav__t">
-            <a href="index.html" class="nav__item">Test</a>
+            <a href="index.html" class="nav__item">Home</a>
           </li>
           <li class="nav__t">
             <a href="artificia.html" class="nav__item">Artificia</a>
@@ -234,7 +234,7 @@
     <footer class="footer">
       <div class="footer__copyright">
         ©KoiDev Games 2021
-        <div class="footer__email">koidev@gmail.com</div>
+        
       </div>
       <div class="footer__logo">
         <img src="img/koidevbig.png" alt="KoiDev Logo" class="nav__logo" />
