small image type fix

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
           <div class="section-us__profiles-image">
             <img
               class="section-us__profiles--img"
-              src="img/katiegiugno.png"
+              src="img/katiegiugno.jpg"
               alt="Katie Giugno"
             />
           </div>
