Additional edits June 23

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
     />
 
     <!-- Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet"> 
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;1,300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet"> 
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -72,14 +69,14 @@
         <div class="carousel-img-container">
         <!-- Images -->
           <div class="tech-img-container">
-            <img class="technical-img fade" src="img/nemo_intro.gif" />
-            <img class="technical-img fade" src="img/petra_intro.gif" />
-            <img class="technical-img fade" src="img/stercus_intro.gif" />
-            <img class="technical-img fade" src="img/elina_intro.gif" />
-            <img class="technical-img fade" src="img/zane_intro.gif" />
-            <img class="technical-img fade" src="img/heis_intro.gif" />
-            <img class="technical-img fade" src="img/tom_intro.gif" />
-            <img class="technical-img fade" src="img/ilis_intro.gif" />
+            <img class="technical-img fade" src="img/nemo_intro.gif" alt="Nemo In-Game Gif"/>
+            <img class="technical-img fade" src="img/petra_intro.gif" alt="Petra In-Game Gif" />
+            <img class="technical-img fade" src="img/stercus_intro.gif"  alt="Stercus In-Game Gif"/>
+            <img class="technical-img fade" src="img/elina_intro.gif"  alt="Elina In-Game Gif"/>
+            <img class="technical-img fade" src="img/zane_intro.gif"  alt="Zane In-Game Gif"/>
+            <img class="technical-img fade" src="img/heis_intro.gif"  alt="Heis In-Game Gif"/>
+            <img class="technical-img fade" src="img/tom_intro.gif"  alt="Tom In-Game Gif"/>
+            <img class="technical-img fade" src="img/ilis_intro.gif"  alt="Ilis In-Game Gif"/>
           </div>
 
         </div>
