--- a/artificia.html
+++ b/artificia.html
@@ -71,9 +71,9 @@
     <header class="header-artificia" id="place">
       <div class="banner-box">
         <div class="header-banner"><img src="img/artbanner.png" /></div>
-        <div class="header-subtitle">
+        <h2 class="header-subtitle">
           A Cyberpunk Visual Novel with Branching Choices
-        </div>
+        </h2>
         <div class="header-text">
           Mensonia City, Myvia. A distant country in a distant future.<br /><br />
           A crisis emerges when bots begin to turn against their owners in
@@ -102,30 +102,30 @@
 
         <div class="suitors-row-back">
           <div class="suitorimage zane" id="zane">
-            <img src="img/zane.png" />
+            <img src="img/zane.png" alt="Zane Profile" />
           </div>
           <div class="suitorimage petra" id="petra">
-            <img src="img/petra.png" />
+            <img src="img/petra.png" alt="Petra Profile" />
           </div>
           <div class="suitorimage tom" id="tom">
-            <img src="img/tom.png" />
+            <img src="img/tom.png" alt="Tom Profile" />
           </div>
           <div class="suitorimage elina" id="elina">
-            <img src="img/elina.png" />
+            <img src="img/elina.png" alt="Elina Profile" />
           </div>
         </div>
         <div class="suitors-row-front">
           <div class="suitorimage nemo sf" id="nemo">
-            <img src="img/nemo.png" />
+            <img src="img/nemo.png" alt="Nemo Profile" />
           </div>
           <div class="suitorimage stercus sf" id="stercus">
-            <img src="img/stercus.png" />
+            <img src="img/stercus.png" alt="Stercus Profile" />
           </div>
           <div class="suitorimage ilis sf" id="ilis">
-            <img src="img/ilis.png" />
+            <img src="img/ilis.png" alt="Ilis Profile" />
           </div>
           <div class="suitorimage heis sf" id="heis">
-            <img src="img/heis.png" />
+            <img src="img/heis.png" alt="Heis Profile" />
           </div>
         </div>
       </section>
@@ -156,14 +156,26 @@
             </div>
           </div>
           <div class="lunatallcontainer">
-            <img class="lunaimage full1" src="img/lunafullboth.png" />
+            <img
+              class="lunaimage full1"
+              src="img/lunafullboth.png"
+              alt="Luna profile"
+            />
           </div>
           <div class="lunasubcontainer">
             <div class="lunaprofilecontainer">
-              <img class="lunaimage" src="img/lunaface1.png" />
+              <img
+                class="lunaimage"
+                src="img/lunaface1.png"
+                alt="Luna Small Profile 1"
+              />
             </div>
             <div class="lunaprofilecontainer">
-              <img class="lunaimage" src="img/lunaface2.png" />
+              <img
+                class="lunaimage"
+                src="img/lunaface2.png"
+                alt="Luna Small Profile 2"
+              />
             </div>
           </div>
         </div>
@@ -179,14 +191,46 @@
           <div class="carousel-container">
             <!-- Images -->
             <div class="tech-img-container">
-              <img class="technical-img fade" src="img/elina_intro.gif" />
-              <img class="technical-img fade" src="img/nemo_intro.gif" />
-              <img class="technical-img fade" src="img/petra_intro.gif" />
-              <img class="technical-img fade" src="img/stercus_intro.gif" />
-              <img class="technical-img fade" src="img/zane_intro.gif" />
-              <img class="technical-img fade" src="img/heis_intro.gif" />
-              <img class="technical-img fade" src="img/tom_intro.gif" />
-              <img class="technical-img fade" src="img/ilis_intro.gif" />
+              <img
+                class="technical-img fade"
+                src="img/elina_intro.gif"
+                alt="Elina In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/nemo_intro.gif"
+                alt="Nemo In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/petra_intro.gif"
+                alt="Petra In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/stercus_intro.gif"
+                alt="Stercus In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/zane_intro.gif"
+                alt="Zane In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/heis_intro.gif"
+                alt="Heis In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/tom_intro.gif"
+                alt="Tom In-Game Gif"
+              />
+              <img
+                class="technical-img fade"
+                src="img/ilis_intro.gif"
+                alt="Ilis In-Game Gif"
+              />
             </div>
 
             <!-- Next and previous buttons -->
@@ -212,7 +256,9 @@
         <h2 class="section-title">Explore a new world</h2>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/heischoice.gif" /></div>
+          <div class="imagebase">
+            <img src="img/heischoice.gif" alt="Heis In-Game Choice Gif" />
+          </div>
           <div class="sectText">
             <h3 class="sectionHeaders">
               A Visual Novel with Branching Choices
@@ -231,11 +277,15 @@
             Each chapter includes a side story for each suitor, where you get to
             learn more about the lives of each suitor.
           </div>
-          <div class="imagebase"><img src="img/mapimage.png" /></div>
+          <div class="imagebase">
+            <img src="img/mapimage.png" alt="Image of Artificia Map" />
+          </div>
         </div>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/lunaintro.gif" /></div>
+          <div class="imagebase">
+            <img src="img/lunaintro.gif" alt="Luna In-Game Gif" />
+          </div>
           <div class="sectText">
             <h3 class="sectionHeaders">Indie Pixel Art Aesthetic</h3>
             With a lovingly hand-crafted pixel art aesthetic, Artificia brings a
@@ -251,11 +301,18 @@
             really in the environment--from the ever-present buzz in Mensonia
             City, to the haunting windy passages of the underground sewers!
           </div>
-          <div class="imagebase"><img src="img/petrainteraction.gif" /></div>
+          <div class="imagebase">
+            <img
+              src="img/petrainteraction.gif"
+              alt="Interaction with Petra In-Game Gif"
+            />
+          </div>
         </div>
 
         <div class="meow">
-          <div class="imagebase"><img src="img/relationships.png" /></div>
+          <div class="imagebase">
+            <img src="img/relationships.png" alt="Artificia Relationships UI" />
+          </div>
           <div class="sectText">
             <h3 class="sectionHeaders">Relationships and Rebel Meters</h3>
             Artificia measures your interactions on both a relationship-scale
@@ -284,7 +341,7 @@
           </div>
 
           <a href="#" target="_target" class="section-social__item">
-            <div class="brooch-text">Demo coming May 31, 2021!</div>
+            <div class="brooch-text">Demo coming this summer!</div>
           </a>
         </div>
         <div class="brooch-img-container">
