--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       content="KoiDev Games is an indie game studio creating authentic, charming games with memorable characters."
     />
 
+    <meta name="keywords" content="KoiDev Games Visual Novels"></meta>
+
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,14 +72,12 @@
         <div class="carousel-img-container">
         <!-- Images -->
           <div class="tech-img-container">
-            <img class="technical-img fade" src="img/nemo_intro.gif" alt="Nemo In-Game Gif"/>
-            <img class="technical-img fade" src="img/petra_intro.gif" alt="Petra In-Game Gif" />
-            <img class="technical-img fade" src="img/stercus_intro.gif"  alt="Stercus In-Game Gif"/>
-            <img class="technical-img fade" src="img/elina_intro.gif"  alt="Elina In-Game Gif"/>
-            <img class="technical-img fade" src="img/zane_intro.gif"  alt="Zane In-Game Gif"/>
-            <img class="technical-img fade" src="img/heis_intro.gif"  alt="Heis In-Game Gif"/>
-            <img class="technical-img fade" src="img/tom_intro.gif"  alt="Tom In-Game Gif"/>
-            <img class="technical-img fade" src="img/ilis_intro.gif"  alt="Ilis In-Game Gif"/>
+            <img class="technical-img fade" src="img/titlescreen_anim_1.png" alt="Titlescreen"/>
+            <img class="technical-img fade" src="img/ingameelina.png" alt="Elina In-Game" />
+            <img class="technical-img fade" src="img/ingameheis.png" alt="Heis In-Game" />
+            <img class="technical-img fade" src="img/ingamepit.png" alt="Pit Bots In-Game" />
+            <img class="technical-img fade" src="img/ingamesterilis.png" alt="Elina In-Game" />
+            <img class="technical-img fade" src="img/ingameluna.png" alt="Luna In-Game" />
           </div>
 
         </div>
@@ -203,7 +204,7 @@
               </div>
               <div class="section-social__body--button">
                 <div class="section-social__body--button-text">
-                Follow us on Twitter!
+                Follow KoiDev on Twitter!
               </div>
               </div>
             </a>
@@ -216,7 +217,7 @@
               </div>
               <div class="section-social__body--button">
                 <div class="section-social__body--button-text">
-                Demo coming soon!
+                Artificia Demo Coming Soon!
               </div>
               </div>
             </a>
