--- a/about.html
+++ b/about.html
@@ -79,11 +79,11 @@
           </div>
         </div>
         <div class="about-description">
-          Emma Schaale is a graduating senior studying web and game development.
-          She acts as the producer, artist, writer, and marketer for
-          ‘Artificia’. She hopes that players will enjoy the moral choices posed
-          in-game and the characters the team created. In her free time, she
-          enjoys hiking, martial arts, and video game and anime music.
+          Emma Schaale is game and web developer. She acts as the producer,
+          artist, writer, and marketer for ‘Artificia’. She hopes that players
+          will enjoy the moral choices posed in-game and the characters the team
+          created. In her free time, she enjoys hiking, martial arts, and video
+          game and anime music.
         </div>
         <div class="section-us__profiles section-us__hongyu">
           <h3 class="section-us__profiles--title">Hongyu Li</h3>
@@ -97,10 +97,10 @@
           </div>
         </div>
         <div class="about-description">
-          Hongyu Li is a graduating senior studying game design. She is the
-          programmer for ‘Artificia’ and helped design some characters and story
-          structures. She likes Dating simulations and hopes players can enjoy
-          ‘Artificia’ as much as she does.
+          Hongyu Li is a game designer. She is the programmer for ‘Artificia’
+          and helped design some characters and story structures. She likes
+          Dating simulations and hopes players can enjoy ‘Artificia’ as much as
+          she does.
         </div>
         <div class="section-us__profiles section-us__hank">
           <h3 class="section-us__profiles--title">Hank Lasley</h3>
@@ -115,11 +115,10 @@
           </div>
         </div>
         <div class="about-description">
-          Hank Lasley is a graduating senior studying audio design and game
-          development. He is the audio designer for Artificia, and he
-          contributes to the writing and overall design of the game. He loves to
-          create and consume stories, so he’s excited to be able to share one of
-          his own with a wide audience.
+          Hank Lasley is a audio and game designer. He is the audio designer for
+          Artificia, and he contributes to the writing and overall design of the
+          game. He loves to create and consume stories, so he’s excited to be
+          able to share one of his own with a wide audience.
         </div>
         <div class="section-us__profiles section-us__katie">
           <h3 class="section-us__profiles--title">Katie Giugno</h3>
@@ -135,11 +134,11 @@
           </div>
         </div>
         <div class="about-description">
-          Katie is a junior studying creative writing and (aptly!) artificial
-          intelligence. She is an editor for Artificia but also contributes
-          written and marketing content. After having the opportunity to spend
-          time with the game’s characters, she hopes players fall in love with
-          them just as she has.
+          Katie is a college student studying creative writing and (aptly!)
+          artificial intelligence. She is an editor for Artificia but also
+          contributes written and marketing content. After having the
+          opportunity to spend time with the game’s characters, she hopes
+          players fall in love with them just as she has.
         </div>
       </div>
     </div>
